--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="css/main.css"/>
+    <title>Login Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -58,7 +58,7 @@
     <div class="login-container">
         <h1 style="padding-left: 250px;">Login</h1>
         <form action="#" method="post">
-            <img id="image"src="./image/binary.jpg" width="400px" />
+            <img id="image"src="./images/Binary.jpg" width="400px" />
 
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
@@ -68,5 +68,6 @@
 
             <button type="submit">Login</button>
         </form>
+    </div>
 </body>
 </html>
